--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "native-styled-components",
-  "version": "0.1.0-beta.1",
+  "version": "0.0.1",
   "description": "Styled components to React Native",
   "source": "./src/index.tsx",
   "main": "./lib/commonjs/index.js",
@@ -49,7 +49,12 @@
   "keywords": [
     "react-native",
     "ios",
-    "android"
+    "android",
+    "styled-components",
+    "styled-system",
+    "theme",
+    "theme-provider",
+    "styled-components-replacement"
   ],
   "repository": {
     "type": "git",
